--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "nodemon": "^1.14.8"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
+    "mongoose": "^4.11.10"
   }
 }
