--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.10",
-    "mongoose-unique-validator": "^1.0.6"
+    "mongoose-unique-validator": "^1.0.6",
+    "nodemailer": "^4.4.1"
   }
 }
